Code cleanup
* use java 21 features
* remove deprecations
* trivial intellij fixes
* typos and phrasings