@@ -4,7 +4,6 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
@@ -26,7 +25,7 @@ public class DeprecatedUsage {
     // python-wrapper has wrappers for all extension points and descriptors,
     // they are just wrappers and not real usage
     public static final Set<String> IGNORED_PLUGINS = new HashSet<>(
-            Arrays.asList("python-wrapper.hpi"));
+            List.of("python-wrapper.hpi"));
 
     private final Plugin plugin;
     private final boolean includePluginLibraries;
@@ -40,7 +39,7 @@ public class DeprecatedUsage {
      * Provider = methods we look for
      * Consumer = methods using a provider
      * And in next level, the consumer becomes the provider
-     * 
+     * <p>
      * For a given provider method, returns the consumers methods that calls it inside their bodies
      */
     private final Map<String, Set<String>> providerToConsumers = new HashMap<>();
@@ -49,7 +48,7 @@ public class DeprecatedUsage {
      * Provider = methods we look for
      * Consumer = methods using a provider
      * And in next level, the consumer becomes the provider
-     * 
+     * <p>
      * For a given consumer method, returns the provider methods it calls inside its body
      */
     private final Map<String, Set<String>> consumerToProviders = new HashMap<>();
@@ -81,7 +80,7 @@ public class DeprecatedUsage {
         analyzeWithClassVisitor(pluginFile, classVisitor);
     }
 
-    
+
     public void analyzeWithClassVisitor(File pluginFile, ClassVisitor aClassVisitor)
             throws IOException {
         // recent plugins package their classes as a jar file with the same name as the war file in
@@ -90,7 +89,7 @@ public class DeprecatedUsage {
             String fileName = warReader.nextClass();
             while (fileName != null) {
                 try {
-                    @SuppressWarnings("resource") // handled by warReader.nextClass()
+                    // handled by warReader.nextClass()
                     InputStream is = warReader.getInputStream();
                     analyze(is, aClassVisitor);
                 } catch (Exception e) {
@@ -138,7 +137,6 @@ public class DeprecatedUsage {
                         classes.add(name);
                     }
                 }
-                continue;
             }
         }
         classReader.accept(aClassVisitor, ClassReader.SKIP_DEBUG | ClassReader.SKIP_FRAMES);
@@ -192,7 +190,7 @@ public class DeprecatedUsage {
             }
 
             String callerSignature = DeprecatedApi.getMethodKey(callerClassName, callerName, callerDesc);
-            
+
             providerToConsumers.computeIfAbsent(methodKey, s -> new HashSet<>()).add(callerSignature);
             consumerToProviders.computeIfAbsent(callerSignature, s -> new HashSet<>()).add(methodKey);
         }
@@ -225,7 +223,7 @@ public class DeprecatedUsage {
         }
 
         String fieldKey = DeprecatedApi.getFieldKey(className, name, desc);
-        
+
         boolean lookingForClass = searchCriteria.isLookingForClass(className);
         boolean lookingForFieldKey = searchCriteria.isLookingForField(fieldKey, className, name);
         if (lookingForClass || lookingForFieldKey) {
@@ -268,7 +266,7 @@ public class DeprecatedUsage {
         public void visit(int version, int access, String name, String signature, String superName,
                 String[] interfaces) {
             // log(name + " extends " + superName + " {");
-            
+
             final List<String> superClassAndInterfaces = new ArrayList<>();
             // superClass may be null for java.lang.Object and module-info.class
             // Object would have been filtered but we see lots of module-info classes
@@ -294,12 +292,12 @@ public class DeprecatedUsage {
     private class CallersClassVisitor extends ClassVisitor {
         //TODO check if ThreadLocal is really required
         private String currentClassName = null;
-        
+
         CallersClassVisitor() {
             super(Opcodes.ASM9);
         }
 
-        @Override 
+        @Override
         public void visit(int version, int access, String name, String signature, String superName, String[] interfaces) {
             super.visit(version, access, name, signature, superName, interfaces);
             currentClassName = name;
@@ -317,11 +315,11 @@ public class DeprecatedUsage {
      * Visit every methods and fields
      */
     private class CallersMethodVisitor extends MethodVisitor {
-        String className;
-        String name;
-        String desc;
-        String signature;
-        
+        final String className;
+        final String name;
+        final String desc;
+        final String signature;
+
         CallersMethodVisitor(String className, String name, String desc, String signature) {
             super(Opcodes.ASM9);
             this.className = className;
@@ -343,10 +341,9 @@ public class DeprecatedUsage {
         }
 
         @Override
-        public void visitInvokeDynamicInsn(String name, String descriptor, Handle bootstrapMethodHandle, 
+        public void visitInvokeDynamicInsn(String name, String descriptor, Handle bootstrapMethodHandle,
                                            Object... bootstrapMethodArguments) {
-            if (bootstrapMethodArguments.length > 1 && bootstrapMethodArguments[1] instanceof Handle) {
-                Handle methodArgument = (Handle) bootstrapMethodArguments[1];
+            if (bootstrapMethodArguments.length > 1 && bootstrapMethodArguments[1] instanceof Handle methodArgument) {
                 methodCalled(methodArgument.getOwner(), methodArgument.getName(), methodArgument.getDesc(),
                         this.className, this.name, this.desc);
             }
