@@ -10,6 +10,8 @@ import java.io.StringWriter;
 import java.io.UncheckedIOException;
 import java.net.HttpURLConnection;
 import java.net.SocketException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.file.Files;
@@ -42,7 +44,7 @@ public class Downloader {
         }
         return synced;
     }
-    
+
     public Future<Collection<JenkinsFile>> synchronize(Collection<JenkinsFile> files) {
         final Collection<JenkinsFile> synced = ConcurrentHashMap.newKeySet(files.size());
         final CountDownLatch latch = new CountDownLatch(files.size());
@@ -69,7 +71,7 @@ public class Downloader {
                         pw.println(failure.getMessage());
                         failure.printStackTrace(pw);
                         pw.flush();
-                        System.err.println(sw.toString());
+                        System.err.println(sw);
                     } else {
                         synced.add(file);
                     }
@@ -106,7 +108,7 @@ public class Downloader {
                     concurrentDownloadsPermit.acquire();
                     doRun();
                     result.complete(null);
-                } catch (IOException | DigestException e) {
+                } catch (IOException | DigestException | URISyntaxException e) {
                     result.completeExceptionally(e);
                 } catch (InterruptedException e) {
                     Thread.currentThread().interrupt();
@@ -117,8 +119,8 @@ public class Downloader {
             });
         }
 
-        private void doRun() throws IOException, DigestException {
-            URL url = new URL(file.getUrl());
+        private void doRun() throws IOException, DigestException, URISyntaxException {
+            URL url = new URI(file.getUrl()).toURL();
             try {
                 URLConnection con = url.openConnection();
                 if (url.getProtocol().equalsIgnoreCase("https") || url.getProtocol().equalsIgnoreCase("http")) {
@@ -166,10 +168,7 @@ public class Downloader {
             if ("Premature EOF".equals(ioEx.getMessage())) {
                 return true;
             }
-            if ("Flaky Update Center returned HTTP 502".equals(ioEx.getMessage())) {
-                return true;
-            }
-            return false;
+            return "Flaky Update Center returned HTTP 502".equals(ioEx.getMessage());
         }
     }
 }
